Fixed the alignmnent issue of logo

--- a/src/styles/assessment/assessmentlist.css
+++ b/src/styles/assessment/assessmentlist.css
@@ -14,14 +14,13 @@
     padding: 5px;
     margin-left: 20px;
     margin-top: 15px;
-    width: 30%;
-    height: 80px;
-    margin-right: 5px;
+    width: 100%;
+    height: 180px;
+    margin-right: 8px;
     border: 1px solid #F3F3F3;
     box-shadow: 2px 2px 15px rgba(188, 188, 188, 0.2);
     border-radius: 6px;
 }
-
 
 .pointer {
     cursor: pointer;
